--- a/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
+++ b/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
@@ -4,6 +4,7 @@
 \usepackage{appendix}
 \usepackage{cite}
 \usepackage{dirtree}
+\usepackage{enumerate} % enumerados
 \usepackage{listings}
 \usepackage{longtable}
 \usepackage{float}
@@ -196,8 +197,7 @@ pdfproducer = {pdflatex}
 \input{anexos/01_Manual_Usuario}
 \input{anexos/02_Analisis}
 \input{anexos/03_Implementacion}
-\input{anexos/04_Pruebas_Estres}
-\input{anexos/05_Integracion_Recomendador}
+\input{anexos/04_Integracion_Recomendador}
 
 \chapter*{}
 \thispagestyle{empty}
