--- a/docs/memoria-TFG/capitulos/02_TrabajoDesarrollado.tex
+++ b/docs/memoria-TFG/capitulos/02_TrabajoDesarrollado.tex
@@ -268,36 +268,6 @@ La navegación por estima es una técnica que se aplica en el cliente. Consiste 
 
 Con este método conseguimos calcular cual es la siguiente posición geográfica donde tenemos que colocar un objeto móvil al acabo de un tiempo (el tiempo de refresco de la pantalla). Como ventaja conseguimos disminuir el error en el cálculo de las posiciones de los objetos móviles. Así obtenemos movimientos muy precisos incluso en grafos de movimientos con nodos muy cercanos.
 
-\section{Diseño final}
+\section{Explotación del simulador}
 
-En esta sección se dejan solo algunas de las pantallas más relevantes de la aplicación. Para ver más pantallas debe acudir al manual de usuario en los anexos.
 
-\begin{figure}[H]
- \centering
-  \subfloat[Autentificación de un usuario]{
-   \label{f:login}
-    \includegraphics[width=0.5\textwidth]{imagenes/login.jpg}}
-  \subfloat[Crear un nuevo usuario]{
-   \label{f:register}
-    \includegraphics[width=0.5\textwidth]{imagenes/register.jpg}}
- \caption{Registro y autentificación de un usuario}
- \label{f:LoginRegister}
-\end{figure}
-
-\begin{figure}[H]
-\centering\includegraphics[scale=0.3]{imagenes/busqueda-de-mapas.jpg}
-\caption{Busqueda de mapas}
-\label{BusquedaMapas}
-\end{figure}
-
-\begin{figure}[H]
-\centering\includegraphics[scale=0.3]{imagenes/resumen-simulador.jpg}
-\caption{Simulación en Actur, Zaragoza}
-\label{simulacionActur}
-\end{figure}
-
-\begin{figure}[H]
-\centering\includegraphics[scale=0.3]{imagenes/config-objetos-estaticos.jpg}
-\caption{Configuración de los objetos estáticos}
-\label{ConfigStaticItem}
-\end{figure}
